--- a/index.html
+++ b/index.html
@@ -259,12 +259,12 @@
     </footer>
    
 </main>
-<script src="../Event/scr/js/debug-grid-create.js"></script>
-<script src="../Event/scr/js/main.js"></script>
-<script src="../Event/scr/js/countdown.js"></script>
-<script src="../Event/scr/js/store-scroll.js"></script>
-<script src="../Event/scr/js/scroll-anchors.js"></script>
-<script src="../Event/scr/js/tabs.js"></script>
+<script src="scr/js/debug-grid-create.js"></script>
+<script src="scr/js/main.js"></script>
+<script src="scr/js/countdown.js"></script>
+<script src="scr/js/store-scroll.js"></script>
+<script src="scr/js/scroll-anchors.js"></script>
+<script src="scr/js/tabs.js"></script>
 
 </body>
 </html>
